# godot-mcp

./: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  install.sh  project.godot  setup.sh
.cursor/skills/autotask-installation/: SKILL.md
.cursor/skills/cursor-workflow-installation/: SKILL.md
.cursor/skills/cursor-workflow-tools/: SKILL.md
.cursor/skills/git-setup/: SKILL.md
.cursor/skills/godot-mcp/: SKILL.md
.cursor/skills/project-startup/: SKILL.md
addons/godot_mcp/: http_server.gd  plugin.gd
godot-mcp-server/: Cargo.toml  README.md  mcp-config.json
godot-mcp-server/rules/: godot-mcp-usage.mdc
godot-mcp-server/src/: client.rs
godot-plugin/: README.md  api_handlers.gd  plugin.cfg  plugin.gd
modules/.template/: README.md
modules/autotask/: README.md  install.sh  mcp-config.json
modules/autotask-plugin/: README.md
modules/autotask-plugin/rules/: autotask-plugin-usage.mdc
modules/autotask/bridge/: .env.example  README.md  pyproject.toml
modules/autotask/bridge/bridge/: __main__.py  client.py  server.py  tools.py
modules/autotask/bridge/scripts/: complete_task_workflow.py
modules/autotask/rules/: autotask-mcp-usage.mdc  autotask-specific-tasks-and-deps.mdc
modules/git/: README.md  install.sh  mcp-config.json  pyproject.toml
modules/git/git_mcp/: __init__.py  __main__.py  server.py  tools.py
modules/git/rules/: git-workflow.mdc
modules/godot/: README.md  install.sh  mcp-config.json
modules/godot/src/: main.rs
rules/: auto-commit-on-task-close.mdc  track-work-in-autotask.mdc
(+1 files in other folders)
