[package]
name = "godot-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server bridge for Godot editor API"

[[bin]]
name = "godot_mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.16", default-features = false, features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
